--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+/* COMMON STYLES */
+
 body {
     font-family: 'Roboto', sans-serif;
     color: #434455;
@@ -16,7 +18,74 @@ button {
     cursor: pointer;
 }
 
+h1, h2, h3, h4, h5, h6, p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+ul {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
+
+  .container {
+    width: 1158px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
 /* HEADER STYLES */
+
+.page-header {
+    border-bottom: 1px solid #E7E9FC;
+}
+.header-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.page-nav{
+    display: flex;
+    align-items: center;
+}
+
+.menu {
+    display: flex;
+    column-gap: 40px;
+}
+
+.contacts-list {
+    display: flex;
+    column-gap: 40px;
+}
+
 .logo {
     color: #4D5AE5;
     font-family: 'Raleway', sans-serif;
@@ -27,6 +96,7 @@ button {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     text-decoration: none;
+    margin-right: 76px;
 }
 
 .logo-part-header {
@@ -41,6 +111,7 @@ button {
 }
 
 .menu-link {
+    display: block;
     color: #2E2F42;
     font-size: 16px;
     font-style: normal;
@@ -48,6 +119,8 @@ button {
     line-height: 1.5;
     letter-spacing: 0.02em;
     text-decoration: none;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .menu-link:hover,
@@ -60,6 +133,7 @@ button {
 }
 
 .contacts-link {
+    display: block;
     color: #434455;
     font-size: 16px;
     font-style: normal;
@@ -67,6 +141,8 @@ button {
     line-height: 1.5;
     letter-spacing: 0.02em;
     text-decoration: none;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .contacts-link:hover,
@@ -77,9 +153,15 @@ button {
 /* HERO SECTION */
 .hero-section {
     background-color: #2E2F42;
+    padding-top: 188px;
+    padding-bottom: 188px;
 }
 
 .main-title {
+    width: 496px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 48px;
     color: #FFFFFF;
     text-align: center;
     font-size: 56px;
@@ -90,6 +172,7 @@ button {
 }
 
 .order-btn {
+    display: block;
     background-color: #4D5AE5;
     color: #FFFFFF;
     font-size: 16px;
@@ -97,6 +180,11 @@ button {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
+    padding: 16px 32px;
+    border-radius: 4px;
+    border: none;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .order-btn:hover,
@@ -106,6 +194,10 @@ button {
 
 /* OUR BENEFITS */
 
+.benefits-item {
+    width: calc((100% - 72px) / 4);
+}
+
 .benefits-title {
     color: #2E2F42;
     font-size: 20px;
@@ -113,6 +205,7 @@ button {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 
 .benefits-text {
@@ -121,9 +214,16 @@ button {
     letter-spacing: 0.02em;
 }
 
+.benefits-list {
+    display: flex;
+    gap: 24px;
+}
+
 /* TEAM SECTION */
 .team-section {
     background-color: #F4F4FD;
+    padding-top: 120px;
+    padding-bottom: 120px;
 }
 
 .team-title {
@@ -135,10 +235,22 @@ font-weight: 700;
 line-height: 1.11;
 letter-spacing: 0.02em;
 text-transform: capitalize;
+margin-left: auto;
+margin-right: auto;
+margin-bottom: 72px;
+}
+
+.team-list{
+    display: flex;
+    gap: 24px;
 }
 
 .team-item {
     background-color: #FFFFFF;
+    width: calc((100% - 72px) / 4);
+    padding-bottom: 32px;
+    border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .team-item-name {
@@ -149,6 +261,8 @@ font-style: normal;
 font-weight: 500;
 line-height: 1.2;
 letter-spacing: 0.02em;
+margin-top: 32px;
+margin-bottom: 8px;
 }
 
 .team-item-prof {
@@ -169,6 +283,20 @@ font-weight: 700;
 line-height: 1.11;
 letter-spacing: 0.02em;
 text-transform: capitalize;
+margin-bottom: 72px;
+}
+
+.portfolio-list{
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+}
+
+.portfolio-item {
+    width: calc((100% - 48px) / 3);
+    padding-bottom: 32px;
+    border: 1px solid #E7E9FC;
 }
 
 .project-name {
@@ -178,17 +306,25 @@ text-transform: capitalize;
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-top: 32px;
+    margin-bottom: 8px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 .project-descr {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 /* FOOTER STYLES */
 .page-footer {
     background-color: #2E2F42;
+    padding-top: 101.5px;
+    padding-bottom: 100px;
 }
 
 .logo-part-footer {
@@ -207,4 +343,6 @@ text-transform: capitalize;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    margin-top: 17.5px;
+    width: 264px;
 }
