--- a/css/styles.css
+++ b/css/styles.css
@@ -248,9 +248,12 @@ margin-bottom: 72px;
 .team-item {
     background-color: #FFFFFF;
     width: calc((100% - 72px) / 4);
-    padding-bottom: 32px;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.team-card-text {
+    padding: 32px 16px;
 }
 
 .team-item-name {
@@ -261,7 +264,6 @@ font-style: normal;
 font-weight: 500;
 line-height: 1.2;
 letter-spacing: 0.02em;
-margin-top: 32px;
 margin-bottom: 8px;
 }
 
@@ -295,8 +297,12 @@ margin-bottom: 72px;
 
 .portfolio-item {
     width: calc((100% - 48px) / 3);
-    padding-bottom: 32px;
+}
+
+.project-card-text {
+    padding: 32px 16px;
     border: 1px solid #E7E9FC;
+    border-top: none;
 }
 
 .project-name {
@@ -306,18 +312,13 @@ margin-bottom: 72px;
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    margin-top: 32px;
     margin-bottom: 8px;
-    padding-left: 16px;
-    padding-right: 16px;
 }
 
 .project-descr {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    padding-left: 16px;
-    padding-right: 16px;
 }
 
 /* FOOTER STYLES */
