--- a/css/styles.css
+++ b/css/styles.css
@@ -78,12 +78,12 @@ img {
 
 .menu {
     display: flex;
-    column-gap: 40px;
+    gap: 40px;
 }
 
 .contacts-list {
     display: flex;
-    column-gap: 40px;
+    gap: 40px;
 }
 
 .logo {
@@ -158,7 +158,7 @@ img {
 }
 
 .main-title {
-    width: 496px;
+    max-width: 496px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 48px;
@@ -185,6 +185,7 @@ img {
     border: none;
     margin-left: auto;
     margin-right: auto;
+    min-width: 169px;
 }
 
 .order-btn:hover,
@@ -253,7 +254,7 @@ margin-bottom: 72px;
 }
 
 .team-card-text {
-    padding: 32px 16px;
+    padding: 32px 0;
 }
 
 .team-item-name {
@@ -324,8 +325,12 @@ margin-bottom: 72px;
 /* FOOTER STYLES */
 .page-footer {
     background-color: #2E2F42;
-    padding-top: 101.5px;
-    padding-bottom: 100px;
+    padding: 100px 0;
+}
+
+.logo-footer {
+    display: inline-block;
+    margin-bottom: 16px;
 }
 
 .logo-part-footer {
@@ -344,6 +349,5 @@ margin-bottom: 72px;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    margin-top: 17.5px;
     width: 264px;
 }
