--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,7 @@ img {
     gap: 40px;
 }
 
-.logo {
+.logo-header {
     color: #4D5AE5;
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
@@ -331,6 +331,16 @@ margin-bottom: 72px;
 .logo-footer {
     display: inline-block;
     margin-bottom: 16px;
+    color: #4D5AE5;
+    font-family: 'Raleway', sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    text-decoration: none;
+    margin-right: 76px;
 }
 
 .logo-part-footer {
